tests/palaiologos/fail/integer_bounds/-2^32/rep_mul.asm
rep mul -100000000h
